Bug 373251 - Component diagram toolbar uses wrong name for ports
Summary: Component diagram toolbar uses wrong name for ports
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.20.80 (KDE Applications 16.11.80)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-04 13:28 UTC by Ralf Habacker
Modified: 2016-12-04 17:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.90 (KDE Applications 16.11.90)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-12-04 13:28:40 UTC
The toolbar of component diagrams contains an entry named 'pin' which is intended to be used by component widgets as 'interaction point'. The uml standard specifies the interaction point of a component as 'port' (http://www.uml-diagrams.org/component-diagrams.html). This should be fixed.
Comment 1 Ralf Habacker 2016-12-04 17:25:17 UTC
Git commit 98a0413614a2f051bd52cfe5148235781666b6ec by Ralf Habacker.
Committed on 04/12/2016 at 17:23.
Pushed by habacker into branch 'master'.

Fix 'Component diagram toolbar uses wrong name for ports.'
FIXED-IN:2.20.90 (KDE Applications 16.11.90)

M  +1    -0    umbrello/toolbarstatefactory.cpp
M  +18   -22   umbrello/umlwidgets/toolbarstateonewidget.cpp
M  +3    -1    umbrello/worktoolbar.cpp
M  +2    -0    umbrello/worktoolbar.h

https://commits.kde.org/umbrello/98a0413614a2f051bd52cfe5148235781666b6ec