Fix 'Component diagram toolbar uses wrong name for ports.'

BUG:373251
FIXED-IN:2.20.90 (KDE Applications 16.11.90)