umbrello/toolbarstatefactory.cpp
@@ -94,6 +94,7 @@ int ToolBarStateFactory::getKey(const WorkToolBar::ToolBar_Buttons &toolbarButto
 
     case WorkToolBar::tbb_Seq_Precondition:         return 4;
     case WorkToolBar::tbb_Pin:                      return 4;
+    case WorkToolBar::tbb_Port:                     return 4;
 
         // Arrow pointer
     case WorkToolBar::tbb_Arrow:                    return 3;
