umbrello/worktoolbar.cpp
@@ -183,7 +183,7 @@ void WorkToolBar::slotCheckToolBar(Uml::DiagramType::Enum dt)
     case Uml::DiagramType::Component:
         insertHotBtn(tbb_Interface);
         insertHotBtn(tbb_Component);
-        insertHotBtn(tbb_Pin);
+        insertHotBtn(tbb_Port);
         insertHotBtn(tbb_Artifact);
         insertBasicAssociations();
         break;
@@ -366,6 +366,7 @@ void WorkToolBar::loadPixmaps()
         { tbb_End_Activity,             i18n("End Activity"),            Icon_Utils::it_Activity_End,            SLOT(slotEnd_Activity()) },
         { tbb_Final_Activity,           i18n("Final Activity"),          Icon_Utils::it_Activity_Final,          SLOT(slotFinal_Activity()) },
         { tbb_Pin,                      i18n("Pin"),                     Icon_Utils::it_Pin,                     SLOT(slotPin()) },
+        { tbb_Port,                     i18n("Port"),                    Icon_Utils::it_Pin,                     SLOT(slotPort()) },
         { tbb_Initial_Activity,         i18n("Initial Activity"),        Icon_Utils::it_Activity_Initial,        SLOT(slotInitial_Activity()) },
         { tbb_Coll_Message_Synchronous, i18n("Synchronous Message"),     Icon_Utils::it_Message_Synchronous,     SLOT(slotColl_Message_Synchronous()) },
         { tbb_Coll_Message_Asynchronous,i18n("Asynchronous Message"),    Icon_Utils::it_Message_Asynchronous,    SLOT(slotColl_Message_Asynchronous()) },
@@ -455,6 +456,7 @@ void WorkToolBar::slotDeepHistory()              { buttonChanged(tbb_DeepHistory
 void WorkToolBar::slotShallowHistory()           { buttonChanged(tbb_ShallowHistory);           }
 void WorkToolBar::slotStateJoin()                { buttonChanged(tbb_StateJoin);                }
 void WorkToolBar::slotPin()                      { buttonChanged(tbb_Pin);                      }
+void WorkToolBar::slotPort()                     { buttonChanged(tbb_Port);                     }
 void WorkToolBar::slotStateFork()                { buttonChanged(tbb_StateFork);                }
 void WorkToolBar::slotJunction()                 { buttonChanged(tbb_Junction);                 }
 void WorkToolBar::slotChoice()                   { buttonChanged(tbb_Choice);                   }
